--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
       </div>
       <!-- content -->
       <div class="content">
-
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
       </div>
       <!-- links -->
       <div class="links">
